--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -21,6 +21,12 @@ jobs:
         with:
           images: fundipper/fungo
      
+      - name: setup QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: login
         uses: docker/login-action@v1
         with:
